--- a/pom.xml
+++ b/pom.xml
@@ -41,14 +41,14 @@
 			<version>2.12.1</version>
 			<scope>compile</scope>
 		</dependency>
-
+ <!--
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.11</version>
 			<scope>compile</scope>
 		</dependency>
-
+		-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -117,6 +117,7 @@
 			</plugin>
 		</plugins>
 	</build>
+	<!--Your comment
 	<reporting>
 		<plugins>
 			<plugin>
@@ -126,4 +127,5 @@
 			</plugin>
 		</plugins>
 	</reporting>
+-->
 </project>
